# regulus-database

./: Cargo.toml  LICENSE  README.md
benches/: benchmarks.rs  join_benchmark.rs
examples/: join_example.rs
src/: lib.rs  main.rs
src/index/: btree.rs  manager.rs  mod.rs
src/persistence/: mod.rs  snapshot.rs  wal.rs
src/query/: builder.rs  mod.rs
src/storage/: engine.rs  mod.rs  persisted_engine.rs
src/transaction/: mod.rs
src/types/: error.rs  mod.rs  schema.rs  value.rs
tests/: auto_increment_test.rs  concurrency_test.rs  default_value_test.rs  distinct_test.rs  null_test.rs  or_not_test.rs  persistence_test.rs  query_test.rs  transaction_test.rs
