[package]
name = "regulus-db"
version = "0.2.0"
edition = "2021"
include = ["src/**/*.rs", "Cargo.toml", "LICENSE", "README"]
license = "MIT"
description = "A Simple API-only Database Application Written by Rust"

[dependencies]
thiserror = "2"
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "join_benchmark"
harness = false
